infrastructure/k8s/deployments/app-depl.yaml
apiVersion: apps/v1 # apps is a bucket with different objects (v1 for example)
kind: Deployment
metadata:
  name: app-depl
spec:
  replicas: 1 # no. of pods we want to create running some images
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec: #configurations for the pods
      containers:
        - name: app
          image: chandanky23/app
---
apiVersion: v1
kind: Service
metadata:
  name: app-srv
spec:
  type: ClusterIP # this is default and can be ignored also
  selector: # We are telling the service to find all the pos with the labels given to it to the outside traffic.
    app: app
  ports: # All the ports exposed to the outside world
    - name: app
      protocol: TCP
      port: 3000 # port exposed by the node port which then pushes the traffic forward to the target port
      targetPort: 3000 # actual port which out app service is exposing.
