infrastructure/k8s/deployments/comments-depl.yaml
apiVersion: apps/v1 # apps is a bucket with different objects (v1 for example)
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1 # no. of pods we want to create running some images
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec: #configurations for the pods
      containers:
        - name: comments
          image: chandanky23/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP # this is default and can be ignored also
  selector: # We are telling the service to find all the pos with the labels given to it to the outside traffic.
    app: comments
  ports: # All the ports exposed to the outside world
    - name: comments
      protocol: TCP
      port: 4001 # port exposed by the node port which then pushes the traffic forward to the target port
      targetPort: 4001 # actual port which out comments service is exposing.
