infrastructure/k8s/deployments/posts-depl.yaml
apiVersion: apps/v1 # apps is a bucket with different objects (v1 for example)
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1 # no. of pods we want to create running some images
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec: #configurations for the pods
      containers:
        - name: posts
          image: chandanky23/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector: # We are telling the service to find all the pos with the labels given to it to the outside traffic.
    app: posts
  ports: # All the ports exposed to the outside world
    - name: posts
      protocol: TCP
      port: 4000 # port exposed by the node port which then pushes the traffic forward to the target port
      targetPort: 4000 # actual port which out posts service is exposing.
