infrastructure/k8s/deployments/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector: # We are telling the service to find all the pos with the labels given to it to the outside traffic.
    app: posts
  ports: # All the ports exposed to the outside world
    - name: posts
      protocol: TCP
      port: 4000 # port exposed by the node port which then pushes the traffic forward to the target port
      targetPort: 4000 # actual port which out posts service is exposing.
